# osdag-plugins

./: README.md
osdag_calculator/Calculator-Plugin-main/: pyproject.toml
osdag_calculator/calculator_plugin/: __init__.py
